--- a/templates/admin/groups.html
+++ b/templates/admin/groups.html
@@ -2,12 +2,12 @@
 
 
 {block name="main_content"}
-<a href="groups.php?q=EDIT">Add New Category</a>
+<a href="groups.php?q=EDIT">{_('Add New Category')}</a>
 	<table class="plain" width="100%">
 		<thead>
 			<tr>
-				<td>Group Name</td>
-				<td>Create Time</td>
+				<td>{_('Group Name')}</td>
+				<td>{_('Create Time')}</td>
 			</tr>
 		</thead>
 		<tbody>
