--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -5,9 +5,9 @@
 	<table class="plain" width="100%">
 		<thead>
 			<tr>
-				<td>User E-mail</td>
-				<td>Register Time</td>
-				<td>Points</td>
+				<td>{_('E-mail')}</td>
+				<td>{_('Register Time')}</td>
+				<td>{_('Points')}</td>
 			</tr>
 		</thead>
 		<tbody>
