--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,6 @@
 {block name="main_content"}
 	<div>
 		<p><label>{_('E-mail')}</label>{$info->email}</p>
-		<p><label>{_('Point')}</label>{$info->points}</p>
+		<p><label>{_('Points')}</label>{$info->points}</p>
 	</div>
 {/block}
