--- a/templates/upload.html
+++ b/templates/upload.html
@@ -30,12 +30,12 @@
 			<p><label>Files</label><input id="fileupload" type="file" name="files[]" multiple></p>
 		</div>
 		<div>
-			<button type="submit">{_('Submit')}</button>
+			<input type="submit" value="{_('Submit')}"/>
 		</div>
-		
+		<br />
 		<table id="files_list">
 			<tr>
-				<td width="200">File Name</td><td width="200">File Size</td><td width="100">Delete</td>
+				<td width="200">{_('File Name')}</td><td width="200">{_('File Size')}</td><td width="100">{_('Delete')}</td>
 			</tr>
 		</table>
 	</form>
