--- a/templates/register.html
+++ b/templates/register.html
@@ -31,5 +31,12 @@
 		<div>
 			<input type="button" value="{_('Submit')}" onclick="submit_form()"/>
 		</div>
+		
+		
+		
+	   
+		
+		<div class="fb-registration" data-fields="[{ 'name':'name' }, { 'name':'email' }]"  data-redirect-uri="http://bookshare.sys2do.com"></div>
+		
 	</form>
 {/block}
