start the pay function

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -39,7 +39,7 @@
 {block name="main_content"}
 	<div>
 		<p><label>{_('E-mail')}</label>{$info->email}</p>
-		<p><label>{_('Points')}</label>{$info->points}</p>
+		<p><label>{_('Points')}</label>{$info->points} (<a href="buy_points.php">Buy Points</a>)</p>
 	</div>
 	
 	
