--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
 	
 	<link rel="stylesheet" type="text/css" href="../public/css/screen.css" />
 
+    <link rel="stylesheet" type="text/css" href="../public/css/{$smarty.session['locale']}.css" />
+    
 	{block name="extCSS"}{/block}
 
 	<script type="text/javascript" src="../public/js/jquery-1.6.4.min.js"></script>
@@ -47,7 +49,7 @@
 			<div>Banner here</div>
 			<p class="obj_right">
 			{if isset($smarty.session['logged']) && $smarty.session['logged'] }
-				{_('welcome')} , {$smarty.session.user->email} | <a href="logout_handler.php">{_('Logout')}</a>
+				{_('welcome')} , {$smarty.session.user->email} | <a href="cart.php">{_('Shopping Cart')}</a> | <a href="logout_handler.php">{_('Logout')}</a>
 			{else}
 				<a href="login.php">{_('Login')}</a> | <a href="register.php">{_('Register')}</a>
 	            {*insert name='facebook_login'*}				
