make the points buy books function

--- a/templates/prepare_pay.html
+++ b/templates/prepare_pay.html
@@ -23,7 +23,7 @@
             <td>{_('Pay Type')}</td>		
 		    <td>
 			  <ul>
-			      <li><input type="radio" name="pay_type" value="Band1"/> Band 1</li>
+			      <li><input type="radio" name="pay_type" value="Band1" checked="checked"/> Band 1</li>
 			      <li><input type="radio" name="pay_type" value="Band2"/> Band 2</li>
 			      <li><input type="radio" name="pay_type" value="Band3"/> Band 3</li>
 			      <li><input type="radio" name="pay_type" value="Band4"/> Band 4</li>
