--- a/templates/cart.html
+++ b/templates/cart.html
@@ -28,7 +28,7 @@
 	   <!-- exchange by points -->
 	   <p>{_('Exchenge by points')}</p>
 	   <p>{_('Current Points')} : {$smarty.session['user']->points}</p>
-	   <form action='' method="post">
+	   <form action='buy_books_via_points.php' method="post">
 	       <input type='hidden' name='books_ids' value='{$book_ids}'/>
 	       <input type="submit" value="{_('Submit')}"/>
 	   </form>
